profile data, fix dev origin, improve debug